home-content fix
home-content sizing issue, not showing all of skills.

--- a/css/styles.css
+++ b/css/styles.css
@@ -279,7 +279,7 @@
     margin: auto;
     overflow: auto;
     overflow-y: hidden;
-    min-height: 725px;
+    min-height: 770px;
   }
   /* line 102, ../sass/_home.scss */
   .home-content h1 {
