--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -96,7 +96,7 @@
         margin: auto; 
         overflow: auto;
         overflow-y: hidden;
-        min-height: 725px;
+        min-height: 770px;
 
     // Header Settings
         h1 {
